--- a/notebooks/Starter_PBC_normal.ipynb
+++ b/notebooks/Starter_PBC_normal.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "prerequisite-mitchell",
+   "id": "according-moldova",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessory-graphics",
+   "id": "irish-metallic",
    "metadata": {},
    "source": [
     "## Import normal peripheral blood cell dataset"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "complicated-summer",
+   "id": "fatal-found",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "constitutional-islam",
+   "id": "alone-domestic",
    "metadata": {
     "tags": []
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dutch-awareness",
+   "id": "narrow-status",
    "metadata": {},
    "source": [
     "### Unique label"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "persistent-japanese",
+   "id": "assured-uncle",
    "metadata": {},
    "source": [
     "Most immature neutrophils (IG) as metamyelocytes, myelocytes and promyelocytes are difficult to differentiate and their separation are prone to debate.\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "rapid-sheep",
+   "id": "precious-artist",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "incident-respondent",
+   "id": "surrounded-andrews",
    "metadata": {
     "tags": []
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceramic-intellectual",
+   "id": "acceptable-denver",
    "metadata": {},
    "source": [
     "The label `.DS` is not an image and should be removed (1 image)"
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "environmental-merchant",
+   "id": "military-sacrifice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "approved-recorder",
+   "id": "administrative-biology",
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "close-profit",
+   "id": "sticky-helping",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,43 +162,18 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "terminal-burns",
+   "id": "annoying-hawaiian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "H = [imageio.imread(file).shape[0] for file in df['img_paths']]\n",
+    "H = [imageio.imread(file).shape[0] for file in df['img_paths']] #slow\n",
     "W = [imageio.imread(file).shape[1] for file in df['img_paths']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "criminal-riding",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df[\"height\"].value_counts().sort_index())\n",
-    "print(\"--------------------------------------\")\n",
-    "print(df[\"width\"].value_counts().sort_index())\n",
-    "print(\"--------------------------------------\")\n",
-    "\n",
-    "# Quelques surprises au niveau de la taille des images... On rabote ?\n",
-    "pix_height = min(df[\"height\"])\n",
-    "pix_width = min(df[\"width\"])\n",
-    "print(\"Min Height : %i ; Min Width : %i\"%(min(df[\"height\"]),min(df[\"width\"])))\n",
-    "print(\"--------------------------------------\")\n",
-    "\n",
-    "# Utile pour plus loin (cf. cellules \"moyennes\")\n",
-    "pix_height = min(pix_height,pix_width)\n",
-    "pix_width = pix_height\n",
-    "\n",
-    "print(\"Min Height : %i ; Min Width : %i\"%(pix_width, pix_height))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 77,
-   "id": "featured-steam",
+   "id": "civilian-indonesian",
    "metadata": {},
    "outputs": [
     {
@@ -219,33 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "adverse-infrastructure",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnidentifiedImageError",
-     "evalue": "cannot identify image file '../data/PBC_dataset_normal_DIB/neutrophil/.DS_169665.jpg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-a75c1ec88b06>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/PBC_dataset_normal_DIB/neutrophil/.DS_169665.jpg'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/anaconda3/envs/ML/lib/python3.8/site-packages/matplotlib/pyplot.py\u001b[0m in \u001b[0;36mimread\u001b[0;34m(fname, format)\u001b[0m\n\u001b[1;32m   2374\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0m_copy_docstring_and_deprecators\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2375\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2376\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2378\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ML/lib/python3.8/site-packages/matplotlib/image.py\u001b[0m in \u001b[0;36mimread\u001b[0;34m(fname, format)\u001b[0m\n\u001b[1;32m   1499\u001b[0m                     \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBytesIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1500\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mformat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1501\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mimg_open\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1502\u001b[0m         return (_pil_png_to_float_array(image)\n\u001b[1;32m   1503\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mPIL\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPngImagePlugin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPngImageFile\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/ML/lib/python3.8/site-packages/PIL/Image.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(fp, mode, formats)\u001b[0m\n\u001b[1;32m   2956\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mmessage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maccept_warnings\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2957\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2958\u001b[0;31m     raise UnidentifiedImageError(\n\u001b[0m\u001b[1;32m   2959\u001b[0m         \u001b[0;34m\"cannot identify image file %r\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2960\u001b[0m     )\n",
-      "\u001b[0;31mUnidentifiedImageError\u001b[0m: cannot identify image file '../data/PBC_dataset_normal_DIB/neutrophil/.DS_169665.jpg'"
-     ]
-    }
-   ],
-   "source": [
-    "plt.imread('../data/PBC_dataset_normal_DIB/neutrophil/.DS_169665.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "indonesian-defense",
+   "id": "supposed-mission",
    "metadata": {},
    "outputs": [],
    "source": []
