starting nb for normal dataset

--- a/notebooks/Starter_PBC_normal.ipynb
+++ b/notebooks/Starter_PBC_normal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 5,
    "id": "material-arnold",
    "metadata": {},
    "outputs": [],
@@ -27,110 +27,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "alike-simpson",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#get path to data/main_dir\n",
-    "path_name = '../data/PBC_dataset_normal_DIB'\n",
-    "path = Path(path_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "moral-plenty",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#create dataframe\n",
-    "df = pd.DataFrame()\n",
-    "df['img_paths'] = [str(image) for image in path.glob('*/*')]\n",
-    "df['id'] = [image.stem.split('_')[1] for image in path.glob('*/*')]\n",
-    "df['label'] = [image.stem.split('_')[0] for image in path.glob('*/*')]\n",
-    "\n",
-    "#id's are similar! Probably 1 patient for different cells"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "acquired-modification",
-   "metadata": {},
-   "source": [
-    "### Sort labels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "crucial-worker",
-   "metadata": {},
-   "source": [
-    "Most immature neutrophils (IG) as metamyelocytes, myelocytes and promyelocytes are difficult to differentiate and their separation are prone to debate.\n",
-    "Band neutrophils are also immature.\n",
-    "Segmented neutrophils are fully mature and can be merge with the category 'Neutrophil'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "nearby-championship",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>img_paths</th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>height</th>\n",
+       "      <th>width</th>\n",
+       "      <th>mean_brightness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_225...</td>\n",
+       "      <td>225079</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>196.225564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_582...</td>\n",
+       "      <td>582430</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>196.672727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_436...</td>\n",
+       "      <td>436409</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>204.348235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_648...</td>\n",
+       "      <td>648815</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>199.038259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_668...</td>\n",
+       "      <td>668574</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>363</td>\n",
+       "      <td>360</td>\n",
+       "      <td>191.020018</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['MO', 'ERB', 'PLATELET', 'BA', 'BNE', 'SNE', 'NEUTROPHIL', 'LY',\n",
-       "       'EO', 'MMY', 'PMY', 'MY', 'IG'], dtype=object)"
+       "                                           img_paths      id label  height  \\\n",
+       "0  ../data/PBC_dataset_normal_DIB/monocyte/MO_225...  225079    MO     363   \n",
+       "1  ../data/PBC_dataset_normal_DIB/monocyte/MO_582...  582430    MO     363   \n",
+       "2  ../data/PBC_dataset_normal_DIB/monocyte/MO_436...  436409    MO     363   \n",
+       "3  ../data/PBC_dataset_normal_DIB/monocyte/MO_648...  648815    MO     363   \n",
+       "4  ../data/PBC_dataset_normal_DIB/monocyte/MO_668...  668574    MO     363   \n",
+       "\n",
+       "   width  mean_brightness  \n",
+       "0    360       196.225564  \n",
+       "1    360       196.672727  \n",
+       "2    360       204.348235  \n",
+       "3    360       199.038259  \n",
+       "4    360       191.020018  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['label'].unique()"
+    "path_name = '../data/PBC_dataset_normal_df.csv'\n",
+    "path = Path(path_name)\n",
+    "df = pd.read_csv(path_name)\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "honest-lyric",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Fusion of neutrophil sub-groups\n",
-    "df[\"label\"] = df[\"label\"].replace(to_replace = [\"NEUTROPHIL\",\"BNE\",\"MY\",\"MMY\",\"PMY\"], \n",
-    "                                  value = [\"SNE\",\"IG\",\"IG\",\"IG\",\"IG\"])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "coordinated-description",
-   "metadata": {},
-   "source": [
-    "The label `.DS` is not an image and should be removed (1 image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "changed-captain",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[~(df['label']=='.DS')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "lesser-letter",
+   "execution_count": 8,
+   "id": "municipal-article",
    "metadata": {},
    "outputs": [
     {
@@ -140,24 +151,15 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['label'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "municipal-article",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#We now have 8 classes\n",
-    "classes = df['label'].unique()"
+    "classes = df['label'].unique()\n",
+    "classes"
    ]
   },
   {
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 9,
    "id": "infectious-deputy",
    "metadata": {},
    "outputs": [
@@ -178,8 +180,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 0 ns, total: 4 µs\n",
-      "Wall time: 9.06 µs\n"
+      "CPU times: user 9 µs, sys: 1e+03 ns, total: 10 µs\n",
+      "Wall time: 17.2 µs\n"
      ]
     }
    ],
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "id": "conventional-accreditation",
    "metadata": {},
    "outputs": [
@@ -200,52 +202,13 @@
        "17092"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(images)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "rational-decision",
-   "metadata": {},
-   "source": [
-    "### Add height, width and brightness to df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "magnetic-quest",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['height'] = [im.shape[0] for im in images]\n",
-    "df['width'] = [im.shape[1] for im in images]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
-   "id": "referenced-absence",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['mean_brightness'] = [np.mean(im) for im in images]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
-   "id": "elect-receipt",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.to_csv('../data/PBC_dataset_normal_df.csv', index=False)"
    ]
   }
  ],
