--- a/notebooks/Start/Starter_PBC.ipynb
+++ b/notebooks/Start/Starter_PBC.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "alike-simpson",
    "metadata": {},
    "outputs": [
@@ -55,6 +55,8 @@
        "      <th>img_paths</th>\n",
        "      <th>id</th>\n",
        "      <th>label</th>\n",
+       "      <th>cell_type</th>\n",
+       "      <th>patient</th>\n",
        "      <th>height</th>\n",
        "      <th>width</th>\n",
        "      <th>mean_brightness</th>\n",
@@ -63,76 +65,87 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_225...</td>\n",
-       "      <td>225079</td>\n",
-       "      <td>MO</td>\n",
+       "      <td>../../data/PBC_dataset_APL_AML/Patient_48/Sign...</td>\n",
+       "      <td>13828414</td>\n",
+       "      <td>ERB</td>\n",
+       "      <td>Erythroblast</td>\n",
+       "      <td>PBC_dataset_APL_AML</td>\n",
        "      <td>363</td>\n",
        "      <td>360</td>\n",
-       "      <td>196.225564</td>\n",
+       "      <td>204.708196</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_582...</td>\n",
-       "      <td>582430</td>\n",
-       "      <td>MO</td>\n",
+       "      <td>../../data/PBC_dataset_APL_AML/Patient_48/Sign...</td>\n",
+       "      <td>13828371</td>\n",
+       "      <td>ERB</td>\n",
+       "      <td>Erythroblast</td>\n",
+       "      <td>PBC_dataset_APL_AML</td>\n",
        "      <td>363</td>\n",
        "      <td>360</td>\n",
-       "      <td>196.672727</td>\n",
+       "      <td>194.427051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_436...</td>\n",
-       "      <td>436409</td>\n",
-       "      <td>MO</td>\n",
+       "      <td>../../data/PBC_dataset_APL_AML/Patient_48/Sign...</td>\n",
+       "      <td>13828375</td>\n",
+       "      <td>ERB</td>\n",
+       "      <td>Erythroblast</td>\n",
+       "      <td>PBC_dataset_APL_AML</td>\n",
        "      <td>363</td>\n",
        "      <td>360</td>\n",
-       "      <td>204.348235</td>\n",
+       "      <td>199.196291</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_648...</td>\n",
-       "      <td>648815</td>\n",
-       "      <td>MO</td>\n",
+       "      <td>../../data/PBC_dataset_APL_AML/Patient_48/Sign...</td>\n",
+       "      <td>13828478</td>\n",
+       "      <td>ERB</td>\n",
+       "      <td>Erythroblast</td>\n",
+       "      <td>PBC_dataset_APL_AML</td>\n",
        "      <td>363</td>\n",
        "      <td>360</td>\n",
-       "      <td>199.038259</td>\n",
+       "      <td>198.018758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>../data/PBC_dataset_normal_DIB/monocyte/MO_668...</td>\n",
-       "      <td>668574</td>\n",
-       "      <td>MO</td>\n",
+       "      <td>../../data/PBC_dataset_APL_AML/Patient_48/Sign...</td>\n",
+       "      <td>13828494</td>\n",
+       "      <td>ERB</td>\n",
+       "      <td>Erythroblast</td>\n",
+       "      <td>PBC_dataset_APL_AML</td>\n",
        "      <td>363</td>\n",
        "      <td>360</td>\n",
-       "      <td>191.020018</td>\n",
+       "      <td>183.606772</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           img_paths      id label  height  \\\n",
-       "0  ../data/PBC_dataset_normal_DIB/monocyte/MO_225...  225079    MO     363   \n",
-       "1  ../data/PBC_dataset_normal_DIB/monocyte/MO_582...  582430    MO     363   \n",
-       "2  ../data/PBC_dataset_normal_DIB/monocyte/MO_436...  436409    MO     363   \n",
-       "3  ../data/PBC_dataset_normal_DIB/monocyte/MO_648...  648815    MO     363   \n",
-       "4  ../data/PBC_dataset_normal_DIB/monocyte/MO_668...  668574    MO     363   \n",
+       "                                           img_paths        id label  \\\n",
+       "0  ../../data/PBC_dataset_APL_AML/Patient_48/Sign...  13828414   ERB   \n",
+       "1  ../../data/PBC_dataset_APL_AML/Patient_48/Sign...  13828371   ERB   \n",
+       "2  ../../data/PBC_dataset_APL_AML/Patient_48/Sign...  13828375   ERB   \n",
+       "3  ../../data/PBC_dataset_APL_AML/Patient_48/Sign...  13828478   ERB   \n",
+       "4  ../../data/PBC_dataset_APL_AML/Patient_48/Sign...  13828494   ERB   \n",
        "\n",
-       "   width  mean_brightness  \n",
-       "0    360       196.225564  \n",
-       "1    360       196.672727  \n",
-       "2    360       204.348235  \n",
-       "3    360       199.038259  \n",
-       "4    360       191.020018  "
+       "      cell_type              patient  height  width  mean_brightness  \n",
+       "0  Erythroblast  PBC_dataset_APL_AML     363    360       204.708196  \n",
+       "1  Erythroblast  PBC_dataset_APL_AML     363    360       194.427051  \n",
+       "2  Erythroblast  PBC_dataset_APL_AML     363    360       199.196291  \n",
+       "3  Erythroblast  PBC_dataset_APL_AML     363    360       198.018758  \n",
+       "4  Erythroblast  PBC_dataset_APL_AML     363    360       183.606772  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_name = '../data/PBC_dataset_normal_df.csv'\n",
+    "# path_name = '../../data/PBC_dataset_normal_df.csv' # for normal\n",
+    "path_name = '../../data/PBC_dataset_AML_APL.csv' # for APL_AML\n",
     "path = Path(path_name)\n",
     "df = pd.read_csv(path_name)\n",
     "df.head()"
@@ -140,24 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "municipal-article",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['MO', 'ERB', 'PLATELET', 'BA', 'IG', 'SNE', 'LY', 'EO'],\n",
-       "      dtype=object)"
+       "array(['ERB', 'LY', 'SNE', 'IG', 'MO', 'SMU', 'BL', 'PC', 'GT', 'UI',\n",
+       "       'EO', 'BA', 'ART', 'ERC', 'USRWBC2'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#We now have 8 classes\n",
     "classes = df['label'].unique()\n",
     "classes"
    ]
@@ -172,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "infectious-deputy",
    "metadata": {},
    "outputs": [
@@ -180,8 +192,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9 µs, sys: 1e+03 ns, total: 10 µs\n",
-      "Wall time: 17.2 µs\n"
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.72 µs\n"
      ]
     }
    ],
@@ -192,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "conventional-accreditation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17092"
+       "15625"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,6 +222,14 @@
    "source": [
     "len(images)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "411e0dfb-01b2-414e-88c4-709b61e45963",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
